--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["esNext", "DOM"],
+    "lib": ["esNext", "DOM"]
   },
   "extends": "tsconfig/react-library.json",
   "include": ["."],
