--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -20,7 +21,9 @@
     "generate:assets": "echo \"No assets to configure\"",
     "test": "echo \"No tests\"",
     "eject": "react-scripts eject",
-    "dev": "storybook dev -p 6006 --no-open",
+    "dev": "concurrently 'npm run watch:*'",
+    "watch:storybook": "storybook dev -p 6006 --no-open",
+    "watch:tailwind": "npx tailwindcss -i ./src/styles/tailwind.css -o ./src/styles/tailwind.output.css --watch",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "build": "storybook build"
   },
@@ -64,6 +67,7 @@
     "remark-gfm": "^3.0.1",
     "storybook": "^7.0.20",
     "tailwind-config": "workspace:*",
+    "tailwindcss": "^3.4.3",
     "ts-loader": "^9.4.3",
     "typescript": "^5.0.2",
     "webpack": "^5.69.0"
