--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "docker:build": "docker build -t asyncapi/studio:latest .",
     "cy:e2e:chrome": "cypress run --e2e --browser chrome",
     "cy:e2e:chromium": "cypress run --e2e --browser chromium",
@@ -95,5 +96,6 @@
     "util": "^0.12.5",
     "web-vitals": "^3.1.0",
     "webpack": "^5.75.0"
-  }
+  },
+  "packageManager": "pnpm@9.0.6"
 }
