--- a/apps/design-system/.gitignore
+++ b/apps/design-system/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log
 .DS_Store# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .turbo
 storybook-static
+src/styles/tailwind.output.css
 
 # dependencies
 /node_modules
