--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -36,6 +36,7 @@
     "@monaco-editor/react": "^4.4.6",
     "@stoplight/yaml": "^4.3.0",
     "@tippyjs/react": "^4.2.6",
+    "driver.js": "^1.3.1",
     "js-base64": "^3.7.3",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
@@ -108,6 +109,7 @@
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cross-env": "^7.0.3",
     "esbuild": "0.18.20",
+    "eslint-config-custom": "workspace:*",
     "https-browserify": "^1.0.0",
     "markdown-toc": "^1.2.0",
     "path-browserify": "^1.0.1",
@@ -123,8 +125,7 @@
     "url": "^0.11.0",
     "util": "^0.12.5",
     "web-vitals": "^3.1.0",
-    "webpack": "^5.75.0",
-    "eslint-config-custom": "workspace:*"
+    "webpack": "^5.75.0"
   },
   "jest": {
     "transformIgnorePatterns": [
