--- a/apps/studio-next/tsconfig.json
+++ b/apps/studio-next/tsconfig.json
@@ -12,7 +12,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -21,8 +21,9 @@
     ],
     "paths": {
       "@/*": ["./src/*", "./public/*"]
-    }
+    },
+    "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/services/tests/**/*.ts", "src/helpers/tests/**/*.ts"],
   "exclude": ["node_modules"]
 }
