--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "echo 'No linting configured'",
-    "test": "jest"
+    "test:unit": "jest",
+    "lint": "echo 'No linting configured'"
   },
   "dependencies": {
     "@asyncapi/avro-schema-parser": "^3.0.19",
@@ -49,7 +49,7 @@
     "reactflow": "^11.2.0",
     "tailwindcss": "3.3.3",
     "tippy.js": "^6.3.7",
-    "ts-jest": "^29.2.4",
+    "ts-jest": "^29.2.5",
     "typescript": "5.1.6",
     "zustand": "^4.5.2"
   },
@@ -83,6 +83,9 @@
     "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-sonarjs": "^0.16.0",
     "https-browserify": "^1.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-yaml": "^1.1.2",
     "markdown-toc": "^1.2.0",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.31",
