feat: implement basic netlify function utilising blobs for sharing

--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -16,31 +16,33 @@
     "@asyncapi/protobuf-schema-parser": "^3.2.8",
     "@asyncapi/react-component": "^1.2.2",
     "@asyncapi/specs": "^6.5.4",
+    "@codemirror/view": "^6.26.3",
     "@ebay/nice-modal-react": "^1.2.10",
     "@headlessui/react": "^1.7.4",
     "@hookstate/core": "^4.0.0-rc21",
     "@monaco-editor/react": "^4.4.6",
-    "@tippyjs/react": "^4.2.6",
-    "js-base64": "^3.7.3",
-    "js-file-download": "^0.4.12",
-    "js-yaml": "^4.1.0",
-    "monaco-editor": "0.34.1",
-    "monaco-yaml": "4.0.2",
-    "react-hot-toast": "2.4.0",
-    "react-icons": "^4.6.0",
-    "reactflow": "^11.2.0",
+    "@netlify/blobs": "^8.0.1",
+    "@netlify/edge-functions": "^2.10.0",
     "@stoplight/yaml": "^4.3.0",
-    "@codemirror/view": "^6.26.3",
+    "@tippyjs/react": "^4.2.6",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "codemirror": "^6.0.1",
     "eslint-config-next": "13.4.12",
+    "js-base64": "^3.7.3",
+    "js-file-download": "^0.4.12",
+    "js-yaml": "^4.1.0",
+    "monaco-editor": "0.34.1",
+    "monaco-yaml": "4.0.2",
     "next": "14.2.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "2.4.0",
+    "react-icons": "^4.6.0",
+    "reactflow": "^11.2.0",
     "tailwindcss": "3.3.3",
     "tippy.js": "^6.3.7",
     "typescript": "5.1.6",
