--- a/apps/studio-next/netlify.toml
+++ b/apps/studio-next/netlify.toml
@@ -1,14 +1,6 @@
 [devs]
-  edge_functions = "apps/studio-next/src/netlify/edge-functions"
+  functions = "apps/studio-next/src/netlify/functions"
   targetPort = 3001
 
 [build]
-  edge_functions = "apps/studio-next/src/netlify/edge-functions"
-
-[[edge_functions]]
-  path = "/share"
-  function = "share-store"
-
-[[edge_functions]]
-  path = "/share/*"
-  function = "share-retreive"
+  functions = "apps/studio-next/src/netlify/functions"
