chore: add @Shurtu-gal as code owner

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,7 +6,7 @@
 
 # The default owners are automatically added as reviewers when you open a pull request unless different owners are specified in the file.
 
-* @magicmatatjahu @KhudaDad414 @Amzani @asyncapi-bot-eve
+* @magicmatatjahu @KhudaDad414 @Amzani @Shurtu-gal @asyncapi-bot-eve
 
 apps/design-system/ @KhudaDad414 @Amzani @princerajpoot20
 packages/ui/ @KhudaDad414 @Amzani @princerajpoot20
