chore: styling issues

--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "cy:e2e:chrome": "cypress run --e2e --browser chrome",
     "cy:e2e:chromium": "cypress run --e2e --browser chromium",
     "cy:e2e:edge": "cypress run --e2e --browser edge",
@@ -30,6 +31,7 @@
     "@netlify/blobs": "^8.0.1",
     "@netlify/functions": "^2.8.1",
     "@stoplight/yaml": "^4.3.0",
+    "@tippyjs/react": "^4.2.6",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
