--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "turbo run lint",
     "dev": "turbo run dev",
     "ds": "turbo run dev --no-cache --continue --filter=design-system...",
-    "studio": "turbo run dev --filter=studio...",
-    "studio-next": "turbo run dev --no-cache --filter=studio-next...",
+    "studio": "turbo run dev --no-cache --filter=studio-next...",
     "clean": "turbo run clean && rm -rf node_modules",
     "build": "turbo run build",
     "test": "turbo run test",
