--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -56,8 +56,12 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "codemirror": "^6.0.1",
+    "crawler-user-agents": "^1.0.154",
     "driver.js": "^1.3.1",
+    "jest": "^29.7.0",
     "js-base64": "^3.7.3",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
