ci: reference npm-get-version-action via commit hash

--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Get current Studio version
         id: get-studio-version
-        uses: martinbeentjes/npm-get-version-action@v1.3.1
+        uses: martinbeentjes/npm-get-version-action@3cf273023a0dda27efcd3164bdfb51908dd46a5b
         with:
           path: apps/studio
 
