--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -28,7 +28,8 @@
         "./src/*",
         "./public/*"
       ]
-    }
+    },
+    "types": ["cypress"]
   },
   "include": [
     "next-env.d.ts",
