fix: include next.config.js
Signed-off-by: Ashish Padhy <ashishpadhy1729@gmail.com>

--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -19,7 +19,8 @@
     "/build",
     "/public",
     "./README.md",
-    "./LICENSE"
+    "./LICENSE",
+    "./next.config.js"
   ],
   "scripts": {
     "dev": "next dev",
