fix: casing issue

--- a/apps/studio/Dockerfile
+++ b/apps/studio/Dockerfile
@@ -34,7 +34,7 @@ COPY --from=builder /app/out/full/ .
 RUN PUBLIC_URL=${BASE_URL_PLACEHOLDER} NEXT_CONFIG_OUTPUT=export pnpm run build:studio
  
 
-FROM docker.io/library/nginx:1.25.5-alpine as runtime
+FROM docker.io/library/nginx:1.25.5-alpine AS runtime
 
 ARG BASE_URL_PLACEHOLDER
 # The base Nginx image automatically executes all shell scripts 
