fix(studio): copy build files with permissions for nginx user

--- a/apps/studio/Dockerfile
+++ b/apps/studio/Dockerfile
@@ -43,7 +43,7 @@ ARG BASE_URL_PLACEHOLDER
 # https://github.com/nginxinc/docker-nginx/blob/master/entrypoint/docker-entrypoint.sh#L16.
 ARG ENTRYPOINT_SCRIPT=/docker-entrypoint.d/set-public-url.sh
 
-COPY --from=installer /app/apps/studio/build /usr/share/nginx/html/
+COPY --from=installer --chown=nginx:nginx /app/apps/studio/build /usr/share/nginx/html/
 # Add an entrypoint script that replaces all occurrences of the 
 # placeholder value by the configured base URL. If no base URL
 # is configured we assume the application is running at '/'.
