--- a/apps/studio/.eslintrc
+++ b/apps/studio/.eslintrc
@@ -5,5 +5,5 @@
     "node": true
   },
   "plugins": ["security"],
-  "extends":["eslint-config-custom", "eslint-config-custom/react", "next/core-web-vitals"]
+  "extends":["next/core-web-vitals", "eslint-config-custom", "eslint-config-custom/react"]
 }
